--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
