--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-QUIZ_APP_DB_URL=""
-JWT_SECRET=""
+JWT_SECRET="1234"
+DATABASE_NAME="postgres"
+DATABASE_PASSWORD="postgres"
+DATABASE_USERNAME="postgres"
+DATABASE_HOST="localhost"
+DATABASE_PORT="5432"
